--- a/frontend/react-pos/package.json
+++ b/frontend/react-pos/package.json
@@ -7,12 +7,14 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.79",
     "@mui/material": "^5.6.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.0.7",
     "@types/react-dom": "^18.0.0",
+    "fetch": "^1.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
