--- a/frontend/react-pos/package.json
+++ b/frontend/react-pos/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.0.7",
     "@types/react-dom": "^18.0.0",
+    "css-loader": "^6.7.1",
     "fetch": "^1.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
