--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.so
 *.dylib
 /bin
+bundle.js
 
 # Test binary, built with `go test -c`
 *.test
@@ -40,3 +41,7 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.db
+.vscode
+dist/
+.DS_Store
